405356  PPC64, xvcvsxdsp, xvcvuxdsp are supposed to write the 32-bit result to
        the upper and lower 32-bits of the 64-bit result
405362  PPC64, vmsummbm instruction doesn't handle overflow case correctly
405363  PPC64, xvcvdpsxws, xvcvdpuxws, do not handle NaN arguments correctly.
405365  PPC64, function _get_maxmin_fp_NaN() doesn't handle QNaN, SNaN case
        correctly.
405733  PPC64, xvcvdpsp should write 32-bit result to upper and lower 32-bits of the 64-bit destination field.

n-i-bz  add syswrap for PTRACE_GET|SET_THREAD_AREA on amd64.
n-i-bz  Fix callgrind_annotate non deterministic order for equal total
n-i-bz  callgrind_annotate --threshold=100 does not print all functions.
n-i-bz  callgrind_annotate Use of uninitialized value in numeric gt (>)



Release 3.14.0 (9 October 2018)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

3.14.0 is a feature release with many improvements and the usual collection of
bug fixes.

This release supports X86/Linux, AMD64/Linux, ARM32/Linux, ARM64/Linux,
PPC32/Linux, PPC64BE/Linux, PPC64LE/Linux, S390X/Linux, MIPS32/Linux,
MIPS64/Linux, ARM/Android, ARM64/Android, MIPS32/Android, X86/Android,
X86/Solaris, AMD64/Solaris and AMD64/MacOSX 10.12.  There is also preliminary
support for X86/macOS 10.13, AMD64/macOS 10.13.

* ==================== CORE CHANGES ===================

* The new option --keep-debuginfo=no|yes (default no) can be used to retain
  debug info for unloaded code.  This allows saved stack traces (e.g. for
  memory leaks) to include file/line info for code that has been dlclose'd (or
  similar).  See the user manual for more information and known limitations.

* Ability to specify suppressions based on source file name and line number.

* Majorly overhauled register allocator.  No end-user changes, but the JIT
  generates code a bit more quickly now.

* ================== PLATFORM CHANGES =================

* Preliminary support for macOS 10.13 has been added.
